--- a/standard.css
+++ b/standard.css
@@ -1,12 +1,12 @@
 /*
-PSeCommerce Style: PSource-Style
+PSeCommerce Style: Standard-Vorlage
 */
 
 
 /**
-PSource-Style Beta v0.1
+PSeCommerce Standard-Vorlage v1.1
 Autor: DerN3rd, Die N3rd
-Verwendet in unserem Shop: https://n3rds.work/shop/
+Das ordinäre Standard-Design von PSeCommerce als Vorlage zum umstylen
 **/
 
 .mp_form_content>h2 {
