Stranges Bling Bling

--- a/psourcedesign.css
+++ b/psourcedesign.css
@@ -277,27 +277,35 @@ button.mp_button-widget-cart {
 #mp-products-filter-form .mp_form_label {
     font-size: 18px
 }
-
+/* Pagination Sektion */
 .mp_listings_nav {
-    border-top: 1px solid #ddd
+    border-top: 1px solid #38c2bb;
 }
 
 .mp_listings_nav .page-numbers {
-    color: #333;
+    color: #fff;
     font-size: 16px;
-    text-decoration: none
+    text-decoration: none;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    display: inline-block;
+    margin-top: 1px;
+    padding: 8px 15px;
+    background: #38c2bb;
 }
 
 .mp_listings_nav .page-numbers.current {
     background: #eee;
-    border-color: #ddd
+    border-color: #38c2bb;
+    border-radius: 50%;
+    color: #38c2bb;
 }
 
 .mp_listings_nav .page-numbers.prev,
 .mp_listings_nav .page-numbers.next {
-    border-color: #333;
+    border-color: #f7f7f7;
     -webkit-transition: all .4s;
-    transition: all .4s
+    transition: all .4s;
 }
 
 .mp_listings_nav .page-numbers.prev:hover,
@@ -922,7 +930,7 @@ a.mp_product_more_link:hover {
 .mp_single_product_details {
     display: block;
     width: 100%;
-    border: 1px solid darkgray;
+    border: 1px solid #38c2bb;
     padding: 5px;
     border-radius: 5px;
 }
@@ -1170,6 +1178,17 @@ a.mp_button-mini-cart {
 
 .mp_product_tab_label.current a {
     opacity: 1
+}
+
+.mp_product .mp_product_tab_content-current {
+    opacity: 1;
+    position: relative;
+    -webkit-transition: opacity .4s ease-in-out;
+    transition: opacity .4s ease-in-out;
+    border: solid 1px #38c2bb;
+    padding: 15px;
+    border-radius: 5px;
+    z-index: 0;
 }
 
 .mp_product_tab_content>p {
